# UniTools-EOM

./: .flake8  .gitignore  .pre-commit-config.yaml  1.txt  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTINUITY.md  Makefile  PRD.md  QUICKSTART.md  README.md  agents1.md  apply_fix.ps1  apply_patch.ps1  check_chars.py  create_icons.ps1  create_icons.py  dev.ps1  door_candidates.csv  door_candidates_level.csv  door_level_scan.json  door_scan.json  door_scan_summary.json  fix_ac_script.py  package-lock.json  patch_ac.py  prd.json  prd.kitchen.json  progress.txt  pyproject.toml  repo-policy.json  requirements-dev.txt  temp_search.py  time-savings-counter.html  tmp_revit_shortlines_scan.js
.claude/: settings.local.json
.github/workflows/: ci.yml  code-quality.yml  release.yml  tests.yml
EOMHub/: EOMHub.spec  build.ps1  requirements.txt  run_dev.bat  tools_config.json  update_exe.ps1
EOMHub/RevitDockablePane/: EOMHub.DockablePane.addin  EOMHub.DockablePane.csproj  HubApp.cs  HubPaneControl.xaml  HubPaneControl.xaml.cs  HubPaneProvider.cs  README.md  SessionPortLocator.cs
EOMHub/frontend/: index.html  package-lock.json  package.json  vite.config.ts
EOMHub/src/: __init__.py  app.py
EOMTemplateTools.extension/: CONTINUITY.md  extension.json
EOMTemplateTools.extension/EOM.tab/: bundle.yaml
EOMTemplateTools.extension/Teslabim.tab/: bundle.yaml
EOMTemplateTools.extension/config/: rules.default.json
EOMTemplateTools.extension/lib/: __init__.py  config_loader.py  entrance_numbering_utils.py  floor_panel_niches.py  hub_command_parser.py  hub_postcommand.py  hub_run_guard.py  hub_temp_paths.py  hub_tool_commands.py  link_reader.py  magic_context.py  orchestrator.py  pk_indicator_rules.py  placement_engine.py  py.typed  rollback_utils.py  socket_utils.py  text_utils.py  time_savings.py  utils_revit.py  utils_units.py
EOMTemplateTools.extension/Разработка.tab/: bundle.yaml
docs/: CI_CD.md  TYPING_MIGRATION.md
docs/ADR/: 001-layered-architecture.md  002-functions-over-classes.md  003-batch-transactions.md  004-spatial-indexing.md  005-mojibake-handling.md  README.md
eom-hub/: EOMHub.spec
eom-hub/backend/: main.py  requirements.txt
eom-hub/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: conftest.py  test_config_loader.py  test_entrance_numbering_utils.py  test_hub_command_mode.py  test_hub_command_parser.py  test_hub_logo_text.py  test_hub_mojibake.py  test_hub_os_alias.py  test_hub_postcommand.py  test_hub_postcommand_gate.py  test_hub_pyrevit_command.py  test_hub_pyrevit_time_savings.py  test_hub_run_guard.py  test_hub_script_closure.py  test_hub_temp_paths.py  test_hub_tool_commands.py  test_kitchen_wall_filters.py  test_lighting_center_exclusions.py  test_lighting_center_lshape.py  test_pk_indicator_rules.py  test_revit_mocks.py  test_rollback_utils.py  test_socket_mojibake.py  test_sockets_general_domain_rules.py  test_switches_doors_candidate_selection.py  test_switches_doors_script_selection_static.py  test_text_utils.py  test_time_savings.py  test_unibim_avcounts_globals.py  test_unibim_cable_length_utils.py  test_unibim_cable_param_utils.py  test_unibim_compensation_utils.py  test_unibim_geometry_utils.py  test_unibim_knk_circuit_utils.py  test_unibim_knk_core.py  test_unibim_knk_create_paths_utils.py  test_unibim_knk_delete_paths_utils.py  test_unibim_knk_laying_methods_utils.py  test_unibim_knk_occupancy_utils.py  test_unibim_knk_param_utils.py  (+11 more)
tests/mocks/: __init__.py  revit_api.py
tools/: teslabim_ui_map.json
tools/rdp_bundle/: build_rdp_bundle.ps1
tools/release/: build_installer.ps1
tools/teslabim_resources/: Avcounts.py  IlluminationCheck.py  ShortCircuit.py  (+3 more)
(+503 files in other folders)
