 [project]
 name = "eomtemplatetools"
 version = "0.2.0"
 description = "pyRevit extension for EOM template automation in Revit"
 readme = "README.md"
 requires-python = ">=3.8"
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
     "flake8>=5.0.0",
     "black>=23.0.0",
     "isort>=5.12.0",
     "pre-commit>=3.0.0",
    "mypy>=1.0.0",
 ]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_functions = ["test_*"]
 addopts = "-v --tb=short"
 
 [tool.black]
 line-length = 120
 target-version = ["py38"]
 exclude = '''
 /(
     \.git
   | \.venv
   | __pycache__
   | build
   | dist
 )/
 '''
 
 [tool.isort]
 profile = "black"
 line_length = 120
 skip = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "socket_utils\\.py$",
    "link_reader\\.py$",
    "placement_engine\\.py$",
    "utils_revit\\.py$",
]
