 [project]
 name = "eomtemplatetools"
 version = "0.2.0"
 description = "pyRevit extension for EOM template automation in Revit"
 readme = "README.md"
 requires-python = ">=3.8"
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
     "flake8>=5.0.0",
     "black>=23.0.0",
     "isort>=5.12.0",
     "pre-commit>=3.0.0",
    "mypy>=1.0.0",
 ]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_functions = ["test_*"]
 addopts = "-v --tb=short"
 
 [tool.black]
 line-length = 120
 target-version = ["py38"]
 exclude = '''
 /(
     \.git
   | \.venv
   | __pycache__
   | build
   | dist
 )/
 '''
 
 [tool.isort]
 profile = "black"
 line_length = 120
 skip = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.8"

# Strict mode settings
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_equality = true

# Gradually enable strict typing (start with new code)
disallow_untyped_defs = false  # TODO: enable incrementally per module
disallow_incomplete_defs = false  # TODO: enable incrementally per module
check_untyped_defs = true

# Revit API and pyRevit modules are untyped
ignore_missing_imports = true

# Exclude legacy modules (migrate incrementally)
exclude = [
    "tests/",
    "socket_utils\\.py$",
    "link_reader\\.py$",
    "placement_engine\\.py$",
    "utils_revit\\.py$",
]

# Strict mode for new modules (example - uncomment when ready)
# [[tool.mypy.overrides]]
# module = "config_loader"
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
